# agi-brain

./: .gitignore  README.md  contact-data.yaml  modal_app.py  pyproject.toml  requirements.txt  run_web.py
configs/: default.yaml
data/: english_patterns.json  language_patterns.json  teaching_corpus.txt
examples/: embodied_demo.py  embodied_navigation.py  enhanced_reasoning.py  gpu_acceleration_demo.py  learning_demo.py  learning_simple.py  multi_rule_reasoning.py  simple_reasoning.py  working_memory_demo.py
notebooks/: agi_brain_colab.ipynb  agi_chat_quick.ipynb  agi_language_learning.ipynb
scripts/: teach_english.py  teach_language.py
src/: __init__.py
src/acceleration/: __init__.py  benchmarks.py  gpu_backend.py  optimized_sim.py
src/cognition/: __init__.py  thought_process.py
src/cognition/executive/: __init__.py  controller.py
src/cognition/working_memory/: __init__.py  wm.py
src/core/: __init__.py
src/core/networks/: __init__.py  cortical.py
src/core/neurons/: __init__.py  izhikevich.py  lif.py
src/core/populations/: __init__.py  population.py
src/core/synapses/: __init__.py  plasticity.py
src/integration/: __init__.py
src/integration/embodiment/: __init__.py  agent.py  environment.py  motor.py  sensory.py
src/interface/: __init__.py  brain_persistence.py  chat_ui.py  learning_pipeline.py  voice_io.py
src/knowledge/: __init__.py  knowledge_graph.py
src/language/: __init__.py  audio_encoder.py  dictionary_loader.py  language_learner.py  phoneme_learner.py  semantic_memory.py  sparse_network.py  speech_generator.py
src/learning/: __init__.py  associative_learning.py
src/reasoning/: __init__.py  poc_100k.py  reasoning_poc.py  rules.py
tests/: __init__.py  test_neurons.py  test_reasoning.py  test_reasoning_rules.py
web_app/: __init__.py  app.py  full_brain.py  index.html  requirements.txt
web_app/brain_data/chats/: 0047a1bf.json  070706a7.json  096acaf9.json  106dd6d2.json  138f96a1.json  199d45d8.json  1c662659.json  33c5d8bf.json  3b8729cb.json  51c7aee3.json  654b20da.json  68920a39.json  6dc685b3.json  7af1af5f.json  86c49f0f.json  8a615795.json  (+15 more)
(+4 files in other folders)
